# DigiRaven

./: LICENSE.txt  README.md  cred.json  database.py  digiRaven.spec  ftp_client.py  ftp_threads.py  main.py  model.py  pyproject.toml
