[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "melisauyar"
version = "0.0.1"
authors = [
    { name = "Melisa Uyar", email = "melisauyar5225@gmail.com" },
]
description = "A simple package for calculating statistics."
readme = "README.md"
keywords = ["melisau", "statistics"]
requires-python = ">=3.6.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/melisau/melisauyar"